--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,11 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  # this takes whatever is in 'default:' from above and jams it into 'test:'
   <<: *default
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: photogur
+  host: localhost
