--- a/config/database.yml
+++ b/config/database.yml
@@ -5,23 +5,23 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
-  pool: 5
-  timeout: 5000
+                     adapter: postgresql
+                     pool: 5
+                     timeout: 5000
 
-development:
-  <<: *default
-  database: db/development.db
+                  development:
+                     <<: *default
+                     database: db/development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  # this takes whatever is in 'default:' from above and jams it into 'test:'
-  <<: *default
-  database: db/test.sqlite3
+                  # Warning: The database defined as "test" will be erased and
+                  # re-generated from your development database when you run "rake".
+                  # Do not set this db to the same as development or production.
+                  test:
+                   # this takes whatever is in 'default:' from above and jams it into 'test:'
+                   <<: *default
+                     database: db/test.sqlite3
 
-production:
-  adapter: postgresql
-  database: photogur
-  host: localhost
+                  production:
+                     adapter: postgresql
+                     database: photogur
+                     host: localhost
